--- a/client/plugin/components/plugin-opener/_index.scss
+++ b/client/plugin/components/plugin-opener/_index.scss
@@ -4,15 +4,34 @@
   z-index: 999;
   border-radius: 50%;
   width: 3.5rem;
-  line-height: 3.5rem;
   height: 3.5rem;
   vertical-align: middle;
   text-align: center;
   position: fixed;
   bottom: $spacing;
   right: $spacing;
+  padding: 0rem;
+  animation-name: pluginOpener;
+  animation-duration: 0.5s;
 
   > i {
-    font-size: 1.2rem !important;
+    font-size: 1.8rem !important;
+    vertical-align: middle;
+    line-height: 3.5rem !important;
+  }
+}
+
+@keyframes pluginOpener {
+  0% {
+    transform: scale(0);
+  }
+  25% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(0.6);
+  }
+  100% {
+    transform: scale(1);
   }
 }
