--- a/client/plugin/components/plugin/_index.scss
+++ b/client/plugin/components/plugin/_index.scss
@@ -10,6 +10,7 @@
   width: $plugin__width;
   border-radius: $border-radius;
   box-sizing: border-box;
+  background-color: white;
 
   &__content {
     padding: $spacing;
