--- a/client/plugin/sass/_theme.scss
+++ b/client/plugin/sass/_theme.scss
@@ -20,6 +20,10 @@
   float: left;
 }
 
+.text-middle {
+  vertical-align: middle;
+}
+
 .text-muted {
   color: $colors__muted !important;
 }
@@ -64,45 +68,59 @@
 }
 
 .btn {
-    display: inline-block;
-    font-weight: 400;
-    line-height: 1.25;
-    text-align: center;
-    white-space: nowrap;
+  display: inline-block;
+  font-weight: 400;
+  line-height: 1rem;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  cursor: pointer;
+  outline: none !important;
+  user-select: none;
+  border: 1px solid transparent;
+  padding: .5rem 1rem;
+  font-size: 1rem;
+  border-radius: .25rem;
+
+  > i {
     vertical-align: middle;
-    cursor: pointer;
-    outline: none !important;
-    user-select: none;
-    border: 1px solid transparent;
-    padding: .5rem 1rem;
-    font-size: 1rem;
-    border-radius: .25rem;
+  }
 
-    &.btn-sm {
-      padding: 0.25rem 0.75rem;
-      font-size: 0.9rem !important;
-
-      i {
-        font-size: 0.9rem !important;
-      }
+  &.btn-icon {
+    > i, > span {
+      vertical-align: middle;
     }
 
-    &:disabled {
-      @include disabled();
-    }
-
-    &.btn-primary {
-      @include button($colors__primary, white);
-    }
-
-    &.btn-danger {
-      @include button($colors__danger, white);
-    }
-
-    &.btn-success {
-      @include button($colors__success, white);
+    > i {
+      font-size: 1.3rem !important;
+      margin-right: 0.25rem;
     }
   }
+
+  &.btn-sm {
+    padding: 0.25rem 0.75rem;
+
+    i {
+      font-size: 1rem !important;
+    }
+  }
+
+  &:disabled {
+    @include disabled();
+  }
+
+  &.btn-primary {
+    @include button($colors__primary, white);
+  }
+
+  &.btn-danger {
+    @include button($colors__danger, white);
+  }
+
+  &.btn-success {
+    @include button($colors__success, white);
+  }
+}
 
 @each $id, $direction in $directions {
   @for $size from 0 through 1 {
