--- a/client/plugin/sass/_variables.scss
+++ b/client/plugin/sass/_variables.scss
@@ -14,6 +14,7 @@ $tutorial__height: 400px;
 
 $visualization__height: 320px;
 $visualization__explanation-height: 300px;
+$visualization_explanation-width: 450px;
 
 $spacing: 1.25rem;
 $border-radius: 0.25rem;
