--- a/client/plugin/components/tutorial-modal/_index.scss
+++ b/client/plugin/components/tutorial-modal/_index.scss
@@ -26,6 +26,8 @@
     width: 100%;
     max-width: $tutorial__width;
     flex: 1;
+    z-index: 999;
+    position: relative;
     background-color: white;
     border-radius: $border-radius;
   }
