--- a/client/plugin/index.scss
+++ b/client/plugin/index.scss
@@ -1,20 +1,9 @@
-@font-face {
-  font-family: 'Material Icons';
-  font-style: normal;
-  font-weight: 400;
-  src: url(/dist/assets/fonts/material-icons/MaterialIcons-Regular.eot); /* For IE6-8 */
-  src: local('Material Icons'),
-       local('MaterialIcons-Regular'),
-       url(/dist/assets/fonts/material-icons/MaterialIcons-Regular.woff2) format('woff2'),
-       url(/dist/assets/fonts/material-icons/MaterialIcons-Regular.woff) format('woff'),
-       url(/dist/assets/fonts/material-icons/MaterialIcons-Regular.ttf) format('truetype');
-}
-
+@import "sass/fonts";
 @import "sass/variables";
 @import "sass/mixins";
 @import "sass/reset";
 
-#sd-plugin {
+.plugin-wrapper {
   @import "sass/icons";
   @import "sass/theme";
   @import "components/**/*.scss";
