--- a/client/plugin/sass/_theme.scss
+++ b/client/plugin/sass/_theme.scss
@@ -49,7 +49,7 @@
 .chart-tooltip {
   background-color: rgba(0, 0, 0, .7);
   color: white;
-  padding: 0.5rem;
+  padding: 0.2rem 0.5rem;
   border-radius: .25rem;
 }
 
@@ -92,7 +92,7 @@
     }
 
     > i {
-      font-size: 1.3rem !important;
+      font-size: 1.2rem !important;
       margin-right: 0.25rem;
     }
   }
