--- a/client/plugin/components/plugin-header/_index.scss
+++ b/client/plugin/components/plugin-header/_index.scss
@@ -5,6 +5,16 @@
     display: flex;
   }
 
+  &__actions {
+    .btn {
+      margin-left: $spacing / 2;
+
+      &:last-child {
+        margin: 0px;
+      }
+    }
+  }
+
   &__title {
     flex: 1;
     white-space: nowrap;
