points meta data

--- a/client/plugin/sass/_theme.scss
+++ b/client/plugin/sass/_theme.scss
@@ -28,6 +28,10 @@
   color: $colors__muted !important;
 }
 
+.text-warning {
+  color: $colors__warning !important;
+}
+
 .text-sm {
   font-size: 0.8rem;
 }
