--- a/client/plugin/sass/_variables.scss
+++ b/client/plugin/sass/_variables.scss
@@ -2,6 +2,7 @@ $colors__primary: #528afc;
 $colors__success: #57b181;
 $colors__danger: #d9534f;
 $colors__muted: #818a91;
+$colors__warning: #d3995f;
 $colors__light-border: rgba(0, 0, 0, .125);
 
 $font__color: #333;
