cleaning styles and disabled cache in development

--- a/client/plugin/components/visualizations/visualization-explanation/style.scss
+++ b/client/plugin/components/visualizations/visualization-explanation/style.scss
@@ -1,66 +1,66 @@
-@import "variables";
-@import "mixins";
+.visualization-explanation {
+  position: relative;
 
-@include plugin-selector() {
-  .visualization-explanation {
+  &__motion-wrapper {
     position: relative;
+    z-index: 1;
+  }
 
-    &__wrapper {
-      position: relative;
-      top: 0.25rem;
+  &__wrapper {
+    position: relative;
+    top: 0.25rem;
 
-      &:after, &:before {
-      	bottom: 100%;
-      	right: 0.5rem;
-      	border: solid transparent;
-      	content: " ";
-      	height: 0;
-      	width: 0;
-      	position: absolute;
-        z-index: 1;
-      	pointer-events: none;
-      }
-
-      &:after {
-      	border-color: rgba(255, 255, 255, 0);
-      	border-bottom-color: #ffffff;
-      	border-width: 10px;
-      	margin-left: -10px;
-      }
-
-      &:before {
-        border-color: transparent;
-      	border-bottom-color: $colors__light-border;
-      	border-width: 11px;
-      	margin-left: -11px;
-      }
-    }
-
-    &__container {
-      @include floating;
-
-      border-radius: .25rem;
-      overflow-y: auto;
-      max-height: $visualization__explanation-height;
-      width: $visualization_explanation-width;
-      position: absolute;
-      right: 0rem;
-      top: 0rem;
-      background-color: white;
+    &:after, &:before {
+    	bottom: 100%;
+    	right: 0.5rem;
+    	border: solid transparent;
+    	content: " ";
+    	height: 0;
+    	width: 0;
+    	position: absolute;
       z-index: 1;
-
-      @media(max-width: $visualization_explanation-width) {
-        width: auto;
-      }
+    	pointer-events: none;
     }
 
-    &__content {
-      padding: $spacing;
+    &:after {
+    	border-color: rgba(255, 255, 255, 0);
+    	border-bottom-color: #ffffff;
+    	border-width: 10px;
+    	margin-left: -10px;
+    }
 
-      > h4 {
-        &:first-child {
-          margin-top: 0rem;
-        }
+    &:before {
+      border-color: transparent;
+    	border-bottom-color: $colors__light-border;
+    	border-width: 11px;
+    	margin-left: -11px;
+    }
+  }
+
+  &__container {
+    @include floating;
+
+    border-radius: .25rem;
+    overflow-y: auto;
+    max-height: $visualization__explanation-height;
+    width: $visualization_explanation-width;
+    position: absolute;
+    right: 0rem;
+    top: 0rem;
+    background-color: white;
+    z-index: 1;
+
+    @media(max-width: $visualization_explanation-width) {
+      width: auto;
+    }
+  }
+
+  &__content {
+    padding: $spacing;
+
+    > h4 {
+      &:first-child {
+        margin-top: 0rem;
       }
     }
   }
