--- a/client/plugin/components/plugin-header/style.scss
+++ b/client/plugin/components/plugin-header/style.scss
@@ -21,6 +21,6 @@
     text-overflow: ellipsis;
     overflow-x: hidden;
     font-weight: bold;
-    font-size: 1.1rem;
+    font-size: rem(1.1);
   }
 }
