--- a/client/plugin/components/plugin-opener/style.scss
+++ b/client/plugin/components/plugin-opener/style.scss
@@ -3,18 +3,18 @@
 
   z-index: 999;
   border-radius: 50%;
-  width: 3.5rem;
-  height: 3.5rem;
+  width: rem(3.5);
+  height: rem(3.5);
   vertical-align: middle;
   text-align: center;
   position: fixed;
   bottom: $spacing;
   right: $spacing;
-  padding: 0rem;
+  padding: rem(0);
 
   > i {
-    font-size: 1.3rem !important;
+    font-size: rem(1.3) !important;
     vertical-align: middle;
-    line-height: 3.5rem !important;
+    line-height: rem(3.5) !important;
   }
 }
