--- a/client/plugin/style/_reset.scss
+++ b/client/plugin/style/_reset.scss
@@ -16,11 +16,11 @@
   	padding: 0;
   	border: 0;
   	font-size: 100%;
-    line-height: 1.5rem;
+    line-height: rem(1.5);
   	vertical-align: baseline;
   }
   p {
-    margin: 1rem 0rem;
+    margin: rem(1) rem(0);
   }
   h1, h2, h3, h4, h5 {
     font-weight: bold;
