--- a/client/plugin/style/_variables.scss
+++ b/client/plugin/style/_variables.scss
@@ -7,6 +7,7 @@ $colors__light-border: rgba(0, 0, 0, .125);
 
 $font__color: #333;
 $font__family: sans-serif;
+$font__size: 15px;
 
 $plugin__width: 400px;
 
@@ -17,8 +18,8 @@ $visualization__height: 300px;
 $visualization__explanation-height: 300px;
 $visualization_explanation-width: 450px;
 
-$spacing: 1.25rem;
-$border-radius: 0.25rem;
+$spacing: $font__size * 1.25;
+$border-radius: $font__size * 0.25;
 
 $directions: (
   "t" "top",
