visualization count from 4 to 2

--- a/client/plugin/style/_components.scss
+++ b/client/plugin/style/_components.scss
@@ -11,3 +11,4 @@
 @import "components/notification/style";
 @import "components/visualizations/textual-visualization/style";
 @import "components/visualizations/textual-visualization-with-grade/style";
+@import "components/modal/style";
