--- a/client/plugin/components/modal/style.scss
+++ b/client/plugin/components/modal/style.scss
@@ -8,25 +8,23 @@
     position: fixed;
     top: 0px;
     left: 0px;
-    z-index: 999;
+    z-index: 9999;
     background-color: rgba(0,0,0,.7);
   }
 
   &__wrapper {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
+    position: absolute;
     width: 100%;
   }
 
   &__container {
     @include floating;
 
+    margin: 0px auto;
     width: 100%;
     max-width: $tutorial__width;
     flex: 1;
-    z-index: 999;
+    z-index: 9999;
     position: relative;
     background-color: white;
     border-radius: $border-radius;
