--- a/client/plugin/components/modal/style.scss
+++ b/client/plugin/components/modal/style.scss
@@ -13,9 +13,10 @@
   }
 
   &__wrapper {
-    position: absolute;
+    position: fixed;
     top: 0px;
     width: 100%;
+    z-index: 9999;
   }
 
   &__container {
