fixed bug in grouping exercises

--- a/client/plugin/style/_components.scss
+++ b/client/plugin/style/_components.scss
@@ -12,3 +12,4 @@
 @import "components/visualizations/textual-visualization/style";
 @import "components/visualizations/textual-visualization-with-grade/style";
 @import "components/modal/style";
+@import "components/survey-modal/style";
